hphp/test/slow/string/set-bytes-bad1.php.expectf

Fatal error: HH\set_bytes_int8 expects no more than 3 arguments in %s/test/slow/string/set-bytes-bad1.php on line 4
